<resources>
    <string name="app_name">Paraparbd</string>

    <string-array name="division">
        <item>Select</item>
        <item>Dhaka</item>
        <item>Khulna</item>
        <item>Barishal</item>
    </string-array>
    <string-array name="district">
        <item>Select</item>
        <item>Dhaka</item>
        <item>Gopalganj</item>
        <item>Gazipur</item>
    </string-array>
    <string-array name="policeStation">
        <item>Select</item>
        <item>Ramna</item>
        <item>Badda</item>
        <item>Rampura</item>
    </string-array>
    <string-array name="car">
        <item>Select</item>
        <item>BMW</item>
        <item>Toyota</item>
        <item>Ferari</item>
    </string-array>

    <string name="phone_no">Phone No</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="not_registered">Not Registered?</string>
    <string name="sign_up">Sign Up</string>
    <string name="eiim">EIIM</string>
    <string name="success">Success!!</string>
    <string name="unsuccess">Unsuccess!!</string>
    <string name="common_user_regi">Common User Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Select Gender</string>
    <string name="email">Email</string>
    <string name="login_page">Login Page</string>
    <string name="address">Address</string>
    <string name="please">Please</string>
    <string name="Insert">Insert</string>
    <string name="hire">Hire A Car</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="all_history">All History</string>
    <string name="e_bus_ticketing">E Bus Ticketing</string>
    <string name="rent_a_car">Rent A Car</string>
    <string name="raid_sharing">Raid Sharing</string>
    <string name="rent_a_car_booking">rent A Car Booking</string>
    <string name="booking_warning">If Car was not selected that means this service not workable for your District</string>
    <string name="click_here">Click Here</string>
    <string name="dd_yy_mm">DD/MM/YY</string>
    <string name="hh_mm">HH:MM</string>
    <string name="pickup_from">Pickup From :</string>
    <string name="select_car">Select Car :</string>
    <string name="destination">Destination</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="total_amount">Total Amount</string>
    <string name="send_request">Send Request</string>
    <string name="parapar_image">Parapar Image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="division">Select Division</string>
    <string name="district">Select District</string>
    <string name="select_police_station">Select Police Station</string>
</resources>