<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    tools:showIn="navigation_view">-->

    <group>  <!--android:checkableBehavior="single">-->
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/hire_car"
            android:icon="@drawable/ic_car"
            android:title="@string/hire" />
    </group>


    <item android:title="@string/all_history">
        <menu>
            <item
                android:id="@+id/history"
                android:icon="@drawable/ic_history"
                android:title="@string/history" />
        </menu>
    </item>

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit" />
</menu>