<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_cu_back"
    tools:context=".commonuser.CommonUserDashboard"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="115dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/parapar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/raid_sharing"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/raid_sharing"
            android:padding="10dp"
            android:textSize="25dp"
            android:drawableLeft="@drawable/ic_motorcycle"
            android:background="@drawable/btn_booking"
            />

        <Button
            android:id="@+id/rent_a_car"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_booking"
            android:text="@string/rent_a_car"
            android:textSize="25dp"
            android:drawableLeft="@drawable/ic_car"
            />

        <Button
            android:id="@+id/e_bus_ticketing"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_booking"
            android:drawableLeft="@drawable/ic_bus"
            android:text="@string/e_bus_ticketing"
            android:textSize="25dp" />
    </LinearLayout>

</LinearLayout>